Project

General

Profile

Actions

Bug #16632

closed

radosgw-admin zone modify --master --rgw-zone=default fails because of no realm

Added by Orit Wasserman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Low
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

radosgw-admin zone modify --master --rgw-zone=default --rgw-zonegroup=default
failed to init realm: (2) No such file or directory

Actions #1

Updated by Orit Wasserman almost 8 years ago

  • Description updated (diff)
Actions #2

Updated by Orit Wasserman over 7 years ago

  • Status changed from In Progress to Resolved
Actions

Also available in: Atom PDF