rgw: remove unused realm from radosgw-admin zone modify

Fixes:http://tracker.ceph.com/issues/16632

Signed-off-by: Orit Wasserman <owasserm@redhat.com>